<resources>
    <string name="app_name">Notes</string>
    <string name="add_note">Add Note</string>
    <string name="add_notes">Add notes</string>
    <string name="login">Login</string>
    <string name="amount">Amount</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="msg_enter_email">Enter your email</string>
    <string name="msg_enter_password">Enter your password</string>
    <string name="msg_email_validation">Enter Valid Email</string>
    <string name="msg_you_have_entered_an_invalid_email_password">You have entered an invalid email or password.</string>
</resources>