<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:paddingVertical="@dimen/dp_20">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guid_line_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dp_20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guid_line_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dp_20" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_notes"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:hint="@string/add_notes"
            app:layout_constraintBottom_toTopOf="@id/text_input_amount"
            app:layout_constraintEnd_toEndOf="@id/guid_line_end"
            app:layout_constraintStart_toStartOf="@id/guid_line_start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_amount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:hint="@string/amount"
            app:layout_constraintBottom_toTopOf="@id/btn_add_note"
            app:layout_constraintEnd_toEndOf="@id/guid_line_end"
            app:layout_constraintStart_toStartOf="@id/guid_line_start"
            app:layout_constraintTop_toBottomOf="@id/text_input_notes">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_note"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:insetTop="@dimen/dp_0"
            android:insetBottom="@dimen/dp_0"
            android:text="@string/add_note"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            app:rippleColor="?attr/colorControlHighlight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guid_line_end"
            app:layout_constraintStart_toStartOf="@id/guid_line_start"
            app:layout_constraintTop_toBottomOf="@id/text_input_amount"
            app:strokeColor="@color/black"
            app:strokeWidth="@dimen/dp_1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>