<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.example.notes.ui.viewmodel.LoginViewModel" />
    </data>
    <ScrollView
        android:id="@+id/cl_login_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:fillViewport="true"
        android:focusable="true"
        tools:context=".ui.main.view.fragment.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guid_line_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/dp_16" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guid_line_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/dp_16" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_login_header"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_46"
                android:gravity="center"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/txt_input_field_email"
                app:layout_constraintEnd_toEndOf="@id/guid_line_end"
                app:layout_constraintStart_toStartOf="@id/guid_line_start"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_field_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                app:layout_constraintBottom_toTopOf="@id/txt_input_field_password"
                app:layout_constraintEnd_toEndOf="@id/guid_line_end"
                app:layout_constraintStart_toStartOf="@id/guid_line_start"
                app:layout_constraintTop_toBottomOf="@id/txt_login_header"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="@={data.email}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_field_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/purple_500"
                app:layout_constraintBottom_toTopOf="@id/btn_login"
                app:layout_constraintEnd_toEndOf="@id/guid_line_end"
                app:layout_constraintStart_toStartOf="@id/guid_line_start"
                app:layout_constraintTop_toBottomOf="@id/txt_input_field_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={data.password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:paddingVertical="@dimen/dp_13"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guid_line_end"
                app:layout_constraintStart_toStartOf="@id/guid_line_start"
                app:layout_constraintTop_toBottomOf="@id/txt_input_field_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>